Remove avatar support
